--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html, body {
     margin: 0;
     height: 100%;
     background-color: black;
-    color: white;
+    color: rgba(255,255,255,0.5);
     font-family: "Public Sans", sans-serif;
 }
 
@@ -74,4 +74,50 @@ html, body {
 .special_text {
     color: white;
     font-weight: bolder;
+    margin-bottom: 40px;
+}
+#projects {
+    margin-top: 250px;
+    text-align: center;
+    color: rgba(255,255,255,0.5);
+}
+#projects_text {
+    margin-bottom: 80px;
+}
+#about {
+    text-align: center;
+    width: 1000px;
+    display: block;
+    margin: 200px auto;
+}
+#about_text {
+    margin-bottom: 60px;
+}
+
+#contact {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.logo {
+    width: 72px;
+    height: 72px;
+    margin: 12px;
+    background-color: white;
+    padding: 4px;
+    border-radius: 50px;
+}
+
+#more_to_come {
+    color: white;
+}
+@keyframes fallIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
