--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html, body {
     background-color: black;
     color: rgba(255,255,255,0.5);
     font-family: "Public Sans", sans-serif;
+    scroll-behavior: smooth;
 }
 
 
