--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     for gray use rgba(255,255,255,0.25) or rgba(255,255,255,0.5) I am not sure
 
 */
+img {
+    max-width: 100%;
+    height: auto;
+}
 html, body {
     margin: 0;
     height: 100%;
@@ -16,19 +20,18 @@ html, body {
 
 
 #top_section {
-    margin: 25px 80px 0;
+    margin-bottom: 20px;
     display: flex;
-    height: fit-content;
-    width: fit-content;
+    flex-wrap: wrap;
     border-bottom: 2px solid #222222;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px 0px;
+    padding: 10px 20px;
 }
 #name {
-    font-size: larger;
+    font-size: 1.5rem;
     border: 0 0 1px gray;
-    margin-right: 679.92px;
+    margin-right: auto;
 }
 
 .link {
@@ -54,21 +57,18 @@ html, body {
 }
 
 #main_text_section {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    height: fit-content;
-    width: fit-content;
-    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+    margin: 40px auto;
 }
 #main_text {
     color: rgba(255,255,255,0.5);
-    font-size: xx-large;
+    font-size: 2rem;
 }
 
 #hello_world {
     color: #174879; 
-    margin: 10px 80px;
+    margin: 10px 5rem;
     font-style: italic;
     font-weight: bolder;
 }
@@ -78,31 +78,32 @@ html, body {
     margin-bottom: 40px;
 }
 #projects {
-    margin-top: 250px;
+    margin-top: 50px;
+    padding: 20px;
     text-align: center;
     color: rgba(255,255,255,0.5);
 }
 #projects_text {
-    margin-bottom: 80px;
+    margin-bottom: 40px;
 }
 #about {
     text-align: center;
-    width: 1000px;
-    display: block;
-    margin: 200px auto;
+    padding: 20px;
+    margin: 100px auto;
 }
 #about_text {
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 #contact {
     text-align: center;
-    margin-bottom: 100px;
+    padding: 20px;
+    margin-bottom: 50px;
 }
 
 .logo {
-    width: 72px;
-    height: 72px;
+    width: 48px;
+    height: 48px;
     margin: 12px;
     background-color: white;
     padding: 4px;
@@ -111,6 +112,46 @@ html, body {
 
 #more_to_come {
     color: white;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+    #top_section {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    #name {
+        margin-bottom: 10px;
+    }
+
+    #main_text_section {
+        margin: 20px auto;
+    }
+
+    #main_text {
+        font-size: 1.5rem;
+    }
+
+    .logo {
+        width: 64px;
+        height: 64px;
+    }
+}
+@media (max-width: 480px) {
+    #name {
+        font-size: 1.25rem;
+    }
+
+    #main_text {
+        font-size: 1.25rem;
+    }
+
+    .logo {
+        width: 48px;
+        height: 48px;
+    }
 }
 @keyframes fallIn {
     0% {
